# wvr-launcher

./: Cargo.toml  README.md
res/: style.css
src/: config_window.rs  filter_config.rs  input_config.rs  main.rs  main_panel.rs  main_window.rs  server_config.rs  utils.rs  view_config.rs  welcome_panel.rs
src/config_panel/: mod.rs  msg.rs  view.rs
src/input_config/: cam_view.rs  midi_view.rs  mod.rs  picture_view.rs  utils.rs  video_view.rs
src/server_config/: mod.rs
src/stage_config/: automation.rs  input.rs  mod.rs  variable.rs  view.rs
src/stage_config/automation/: mod.rs
src/view_config/: mod.rs
src/wvr_frame/: mod.rs
