[package]
name = "wvr-launcher"
version = "0.1.11"
authors = ["gurke.club <contact@gurke.club>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
glib = "0.10"
gtk = {version = "0.9", features = ["v3_16"]}
gdk = "0.13"
gio = "0.9"
relm = "0.21"
relm-derive = "0.21"
serde_json = "1.0"
nfd2 = "0.2" 
strsim = "0.10"
path-calculate = "0.1"

wvr-data = {git = "https://github.com/gurkeclub/wvr-data.git", branch="main"}
